clean(core): format string more cleanly